<resources>
    <string name="app_name">My Work</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="from">"от "</string>
    <string name="hotel">Отель</string>
    <string name="about_hotel">Об отеле</string>
    <string name="conv">Удобства</string>
    <string name="included">Что включено</string>
    <string name="necessary">Самое необходимое</string>
    <string name="choose_room">К выбору номера</string>
    <string name="more">Подробнее о номере ❯</string>
    <string name="choose_room_button">Выбрать номер</string>
    <string name="booking">Бронирование</string>
    <string name="departure">Вылет из</string>
    <string name="country_city">Страна, город</string>
    <string name="dates">Даты</string>
    <string name="nights">Кол-во ночей</string>
    <string name="room">Номер</string>
    <string name="nutrition">Питание</string>
    <string name="buyer_info">Информация о покупателе</string>
    <string name="phone_num">Номер телефона</string>
    <string name="email">Почта</string>
    <string name="data_info">Эти данные никому не передаются. После оплаты мы вышлем чек на указанный номер и почту</string>
    <string name="tour">Тур</string>
    <string name="fuel">Топливный сбор</string>
    <string name="service">Сервисный сбор</string>
    <string name="for_payment">К оплате</string>
    <string name="pasport_duration">Срок действия загранпаспорта</string>
    <string name="pas_num">Номер загранпаспорта</string>
    <string name="citizenship">Гражданство</string>
    <string name="dob">Дата рождения</string>
    <string name="sec_name">Фамилия</string>
    <string name="first_name">Имя</string>
</resources>